// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/card should render 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="msla-panel-card-container"
    data-automation-id="card-title"
    data-testid="card-title"
    onClick={[Function]}
    onContextMenu={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    style={
      Object {
        "borderLeft": "4px solid rgba(71,71,71, 1)",
        "borderRadius": "2px",
      }
    }
    tabIndex={1}
  >
    <div
      className="msla-selection-box"
    />
    <div
      className="panel-card-main"
    >
      <div
        aria-label=" operation"
        className="panel-card-header"
        role="button"
      >
        <div
          className="panel-card-content-container"
        >
          <div
            className="panel-card-content-gripper-section"
          />
          <div
            className="panel-card-content-icon-section"
          >
            <div
              className="fui-Spinner msla-card-header-spinner ___p104zz0_oywd6f0 f22iagw f122n59 f4d9j23 fez10in f4px1ci fn67r4l f1063pyq"
              role="progressbar"
            >
              <span
                className="fui-Spinner__spinner ___1lv4f9l_18iydzw f1or16p5 f1grzc83 f19shzzi f5tbecn fn4mtlg f1y80fxs f1r2crtq f1wsi8sr f1bkm2qd f1urqz7h f1da2vov f11rfva0 f1exc66 f1j4wmu2 f1vppzuq fv1u54w fngtx1d f11ditju f1m9nikz fq8a5sv f1b4lwqj f1najlst fjxod4 fu3xdw0 f1ttdh6v f1eseayc folzdkc fhlfkde f13qeqtg flglbw1"
              >
                <svg
                  className="fui-Spinner__Progressbar"
                >
                  <circle
                    className="fui-Spinner__Track"
                  />
                  <circle
                    className="fui-Spinner__Tail"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            className="panel-card-top-content"
          >
            <div
              className="panel-msla-title"
            >
              title
            </div>
          </div>
        </div>
      </div>
      <div
        className="msla-card-v2-footer"
      >
        <div
          className="msla-badges"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`lib/card should render as cloned 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="msla-panel-card-container msla-card-ghost-image"
    data-automation-id="card-title"
    data-testid="card-title"
    onClick={[Function]}
    onContextMenu={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    style={
      Object {
        "borderLeft": "4px solid rgba(71,71,71, 1)",
        "borderRadius": "2px",
      }
    }
    tabIndex={1}
  >
    <div
      className="msla-selection-box"
    />
    <div
      className="panel-card-main"
    >
      <div
        aria-label=" operation"
        className="panel-card-header"
        role="button"
      >
        <div
          className="panel-card-content-container"
        >
          <div
            className="panel-card-content-gripper-section"
          />
          <div
            className="panel-card-content-icon-section"
          >
            <div
              className="fui-Spinner msla-card-header-spinner ___p104zz0_oywd6f0 f22iagw f122n59 f4d9j23 fez10in f4px1ci fn67r4l f1063pyq"
              role="progressbar"
            >
              <span
                className="fui-Spinner__spinner ___1lv4f9l_18iydzw f1or16p5 f1grzc83 f19shzzi f5tbecn fn4mtlg f1y80fxs f1r2crtq f1wsi8sr f1bkm2qd f1urqz7h f1da2vov f11rfva0 f1exc66 f1j4wmu2 f1vppzuq fv1u54w fngtx1d f11ditju f1m9nikz fq8a5sv f1b4lwqj f1najlst fjxod4 fu3xdw0 f1ttdh6v f1eseayc folzdkc fhlfkde f13qeqtg flglbw1"
              >
                <svg
                  className="fui-Spinner__Progressbar"
                >
                  <circle
                    className="fui-Spinner__Track"
                  />
                  <circle
                    className="fui-Spinner__Tail"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            className="panel-card-top-content"
          >
            <div
              className="panel-msla-title"
            >
              title
            </div>
          </div>
        </div>
      </div>
      <div
        className="msla-card-v2-footer"
      >
        <div
          className="msla-badges"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`lib/card should render as draggable 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="msla-panel-card-container"
    data-automation-id="card-title"
    data-testid="card-title"
    onClick={[Function]}
    onContextMenu={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    style={
      Object {
        "borderLeft": "4px solid rgba(71,71,71, 1)",
        "borderRadius": "2px",
      }
    }
    tabIndex={1}
  >
    <div
      className="msla-selection-box"
    />
    <div
      className="panel-card-main"
    >
      <div
        aria-label=" operation"
        className="panel-card-header"
        role="button"
      >
        <div
          className="panel-card-content-container"
        >
          <div
            className="panel-card-content-gripper-section draggable"
          >
            <svg
              fill="none"
              height="12"
              viewBox="0 0 2 10"
              width="4"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 2V0H2V2H0ZM0 6V4H2V6H0ZM0 10V8H2V10H0Z"
                fill="#605E5C"
              />
            </svg>
          </div>
          <div
            className="panel-card-content-icon-section"
          >
            <div
              className="fui-Spinner msla-card-header-spinner ___p104zz0_oywd6f0 f22iagw f122n59 f4d9j23 fez10in f4px1ci fn67r4l f1063pyq"
              role="progressbar"
            >
              <span
                className="fui-Spinner__spinner ___1lv4f9l_18iydzw f1or16p5 f1grzc83 f19shzzi f5tbecn fn4mtlg f1y80fxs f1r2crtq f1wsi8sr f1bkm2qd f1urqz7h f1da2vov f11rfva0 f1exc66 f1j4wmu2 f1vppzuq fv1u54w fngtx1d f11ditju f1m9nikz fq8a5sv f1b4lwqj f1najlst fjxod4 fu3xdw0 f1ttdh6v f1eseayc folzdkc fhlfkde f13qeqtg flglbw1"
              >
                <svg
                  className="fui-Spinner__Progressbar"
                >
                  <circle
                    className="fui-Spinner__Track"
                  />
                  <circle
                    className="fui-Spinner__Tail"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            className="panel-card-top-content"
          >
            <div
              className="panel-msla-title"
            >
              title
            </div>
          </div>
        </div>
      </div>
      <div
        className="msla-card-v2-footer"
      >
        <div
          className="msla-badges"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`lib/card should render as inactive 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="msla-panel-card-container inactive"
    data-automation-id="card-title"
    data-testid="card-title"
    onClick={[Function]}
    onContextMenu={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    style={
      Object {
        "borderLeft": "4px solid rgba(71,71,71, 1)",
        "borderRadius": "2px",
      }
    }
    tabIndex={1}
  >
    <div
      className="msla-selection-box"
    />
    <div
      className="panel-card-main"
    >
      <div
        aria-label=" operation"
        className="panel-card-header"
        role="button"
      >
        <div
          className="panel-card-content-container"
        >
          <div
            className="panel-card-content-gripper-section"
          />
          <div
            className="panel-card-content-icon-section"
          >
            <div
              className="fui-Spinner msla-card-header-spinner ___p104zz0_oywd6f0 f22iagw f122n59 f4d9j23 fez10in f4px1ci fn67r4l f1063pyq"
              role="progressbar"
            >
              <span
                className="fui-Spinner__spinner ___1lv4f9l_18iydzw f1or16p5 f1grzc83 f19shzzi f5tbecn fn4mtlg f1y80fxs f1r2crtq f1wsi8sr f1bkm2qd f1urqz7h f1da2vov f11rfva0 f1exc66 f1j4wmu2 f1vppzuq fv1u54w fngtx1d f11ditju f1m9nikz fq8a5sv f1b4lwqj f1najlst fjxod4 fu3xdw0 f1ttdh6v f1eseayc folzdkc fhlfkde f13qeqtg flglbw1"
              >
                <svg
                  className="fui-Spinner__Progressbar"
                >
                  <circle
                    className="fui-Spinner__Track"
                  />
                  <circle
                    className="fui-Spinner__Tail"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            className="panel-card-top-content"
          >
            <div
              className="panel-msla-title"
            >
              title
            </div>
          </div>
        </div>
      </div>
      <div
        className="msla-card-v2-footer"
      >
        <div
          className="msla-badges"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`lib/card should render as selected 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="msla-panel-card-container msla-panel-card-container-selected"
    data-automation-id="card-title"
    data-testid="card-title"
    onClick={[Function]}
    onContextMenu={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    style={
      Object {
        "borderLeft": "4px solid rgba(71,71,71, 1)",
        "borderRadius": "2px",
      }
    }
    tabIndex={1}
  >
    <div
      className="msla-selection-box selected"
    />
    <div
      className="panel-card-main"
    >
      <div
        aria-label=" operation"
        className="panel-card-header"
        role="button"
      >
        <div
          className="panel-card-content-container"
        >
          <div
            className="panel-card-content-gripper-section"
          />
          <div
            className="panel-card-content-icon-section"
          >
            <div
              className="fui-Spinner msla-card-header-spinner ___p104zz0_oywd6f0 f22iagw f122n59 f4d9j23 fez10in f4px1ci fn67r4l f1063pyq"
              role="progressbar"
            >
              <span
                className="fui-Spinner__spinner ___1lv4f9l_18iydzw f1or16p5 f1grzc83 f19shzzi f5tbecn fn4mtlg f1y80fxs f1r2crtq f1wsi8sr f1bkm2qd f1urqz7h f1da2vov f11rfva0 f1exc66 f1j4wmu2 f1vppzuq fv1u54w fngtx1d f11ditju f1m9nikz fq8a5sv f1b4lwqj f1najlst fjxod4 fu3xdw0 f1ttdh6v f1eseayc folzdkc fhlfkde f13qeqtg flglbw1"
              >
                <svg
                  className="fui-Spinner__Progressbar"
                >
                  <circle
                    className="fui-Spinner__Track"
                  />
                  <circle
                    className="fui-Spinner__Tail"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            className="panel-card-top-content"
          >
            <div
              className="panel-msla-title"
            >
              title
            </div>
          </div>
        </div>
      </div>
      <div
        className="msla-card-v2-footer"
      >
        <div
          className="msla-badges"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`lib/card should render with an icon and a connector name (0) 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="msla-panel-card-container"
    data-automation-id="card-title"
    data-testid="card-title"
    onClick={[Function]}
    onContextMenu={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    style={
      Object {
        "borderLeft": "4px solid rgba(71,71,71, 1)",
        "borderRadius": "2px",
      }
    }
    tabIndex={1}
  >
    <div
      className="msla-selection-box"
    />
    <div
      className="panel-card-main"
    >
      <div
        aria-label="SharePoint connector"
        className="panel-card-header"
        role="button"
      >
        <div
          className="panel-card-content-container"
        >
          <div
            className="panel-card-content-gripper-section"
          />
          <div
            className="panel-card-content-icon-section"
          >
            <img
              alt=""
              className="panel-card-icon"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            />
          </div>
          <div
            className="panel-card-top-content"
          >
            <div
              className="panel-msla-title"
            >
              title
            </div>
          </div>
        </div>
      </div>
      <div
        className="msla-card-v2-footer"
      >
        <div
          className="msla-badges"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`lib/card should render with an icon and an operation name (1) 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="msla-panel-card-container"
    data-automation-id="card-title"
    data-testid="card-title"
    onClick={[Function]}
    onContextMenu={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    style={
      Object {
        "borderLeft": "4px solid rgba(71,71,71, 1)",
        "borderRadius": "2px",
      }
    }
    tabIndex={1}
  >
    <div
      className="msla-selection-box"
    />
    <div
      className="panel-card-main"
    >
      <div
        aria-label="Get an item operation"
        className="panel-card-header"
        role="button"
      >
        <div
          className="panel-card-content-container"
        >
          <div
            className="panel-card-content-gripper-section"
          />
          <div
            className="panel-card-content-icon-section"
          >
            <img
              alt=""
              className="panel-card-icon"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            />
          </div>
          <div
            className="panel-card-top-content"
          >
            <div
              className="panel-msla-title"
            >
              title
            </div>
          </div>
        </div>
      </div>
      <div
        className="msla-card-v2-footer"
      >
        <div
          className="msla-badges"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`lib/card should render with an icon and an operation name and connector name (2) 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="msla-panel-card-container"
    data-automation-id="card-title"
    data-testid="card-title"
    onClick={[Function]}
    onContextMenu={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    style={
      Object {
        "borderLeft": "4px solid rgba(71,71,71, 1)",
        "borderRadius": "2px",
      }
    }
    tabIndex={1}
  >
    <div
      className="msla-selection-box"
    />
    <div
      className="panel-card-main"
    >
      <div
        aria-label="Get an item operation, SharePoint connector"
        className="panel-card-header"
        role="button"
      >
        <div
          className="panel-card-content-container"
        >
          <div
            className="panel-card-content-gripper-section"
          />
          <div
            className="panel-card-content-icon-section"
          >
            <img
              alt=""
              className="panel-card-icon"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            />
          </div>
          <div
            className="panel-card-top-content"
          >
            <div
              className="panel-msla-title"
            >
              title
            </div>
          </div>
        </div>
      </div>
      <div
        className="msla-card-v2-footer"
      >
        <div
          className="msla-badges"
        />
      </div>
    </div>
  </div>
</div>
`;
